--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 }
 
 .header--sticky {
-  background: #4682b4;
+  background: #add8e6;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -57,14 +57,14 @@
   width: 125px;
   text-decoration: none;
   height: 100%;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .header__navbar-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
   padding: 1rem;
   width: 100%;
 }
@@ -83,6 +83,15 @@
 }
 
 .header__navbar-link:hover {
-  color: #add8e6;
-  transition: all 0.4s ease;
+  color: #4682b4;
+  transition: all 0.5s ease;
+}
+
+#contact:hover {
+  color: #4682b4;
+  transition: all 0.5s ease;
+}
+
+.highlight {
+  border-bottom: 5px solid #4682b4;
 }
